testdata/baselines/reference/submodule/compiler/indexerAssignability.errors.txt
indexerAssignability.ts(6,1): error TS2322: Type '{}' is not assignable to type '{ [s: string]: string; }'.
  Index signature for type 'string' is missing in type '{}'.
indexerAssignability.ts(8,1): error TS2322: Type '{}' is not assignable to type '{ [n: number]: string; }'.
  Index signature for type 'number' is missing in type '{}'.


==== indexerAssignability.ts (2 errors) ====
    var a: { [s: string]: string; };
    var b: { [n: number]: string; };
    var c: {};
    
    a = b;
    a = c;
    ~
!!! error TS2322: Type '{}' is not assignable to type '{ [s: string]: string; }'.
!!! error TS2322:   Index signature for type 'string' is missing in type '{}'.
    b = a;
    b = c;
    ~
!!! error TS2322: Type '{}' is not assignable to type '{ [n: number]: string; }'.
!!! error TS2322:   Index signature for type 'number' is missing in type '{}'.
    c = a;
    c = b;